--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>&#6158;&nbsp;TMM Katip</title>
-    <link rel="shortcut icon" href="static/img/b45.png">
+    <link rel="shortcut icon" href="../static/img/fav.png">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
             outline: none;
             z-index: 2;
             box-shadow: none;
-            background-color: #f0f0f0;
+            background-color: #ebebeb;
         }
 
         .btn-group button img {
@@ -224,10 +224,20 @@
             "M 0,2.325235 M 0.187833,1.865368 c 0,0 0.0065,0.148971 0.103632,0.148971 0.07125,0 0.09716,-0.07772 0.136017,-0.181356 0.09716,-0.233172 0.213741,-0.77724 0.634746,-0.77724 0.375666,0 0.822579,0.699516 1.36017,0.699516 0.265557,0 0.395097,-0.136017 0.466344,-0.19431 0.03239,-0.01943 0.06477,-0.03886 0.0842,-0.03886 0.03886,0 0.05829,0.02591 0.06477,0.0842 0,0.25908 -0.71247,0.783717 -1.275969,1.444371 C 1.405508,3.465188 1.12052,4.002779 1.12052,4.365491 c 0,0.200787 0,0.291465 0.174879,0.291465 0.168402,0 0.375666,-0.0842 0.608838,-0.0842 0.233172,0 0.667131,0.0842 0.764286,0.0842 0.09068,0 0.148971,-0.07772 0.148971,-0.343281 0,-1.560957 1.107567,-2.895219 1.107567,-3.853815 V 0.421 c 0,-0.252603 0,-0.369189 -0.155448,-0.369189 -0.01295,0 -0.161925,0.03239 -0.19431,0.09716 -0.07125,0.116586 -0.200787,0.6477 -0.433959,0.6477 C 2.908172,0.796671 2.474213,0 1.696973,0 1.159382,0 1.016888,0.220218 0.887348,0.336804 0.757808,0.459867 0.699515,0.498729 0.634745,0.505206 c -0.07772,0 -0.19431,-0.12954 -0.246126,-0.220218 -0.01295,-0.03886 -0.06477,-0.06477 -0.110109,-0.06477 -0.04534,0 -0.09068,0.02591 -0.09068,0.110109",
             "m 0,2.415921 m 0.187833,1.23063 c 0,0.809625 0.835533,1.185291 1.761744,1.185291 0.932688,0 1.930146,-0.401574 1.930146,-1.658112 0,-0.563499 -0.32385,-0.867918 -0.764286,-1.094613 C 3.452241,1.865376 3.672459,1.560957 3.672459,1.094613 3.672459,0.142494 2.305812,0 2.053209,0 0.97155,0 0.233172,0.492252 0.233172,1.275969 c 0,0.6477 0.362712,0.990981 0.809625,1.243584 C 0.557022,2.752725 0.187833,3.057144 0.187833,3.646551 m 0.531114,-0.04534 c 0,-0.375666 0.32385,-0.718947 0.738378,-0.874395 0.680085,0.297942 1.366647,0.492252 1.366647,1.107567 0,0.369189 -0.284988,0.686562 -0.913257,0.686562 -0.621792,0 -1.191768,-0.317373 -1.191768,-0.919734 M 2.033778,0.272034 c 0.297942,0 1.088136,0.148971 1.088136,0.803148 0,0.369189 -0.181356,0.615315 -0.492252,0.790194 C 1.884807,1.606296 1.088136,1.444371 1.088136,0.861441 c 0,-0.395097 0.537591,-0.589407 0.945642,-0.589407",
             "m 0,2.338201 m 1.593342,0.446913 c 0.297942,0 0.608838,-0.110109 0.848487,-0.32385 0.01943,-0.01943 0.03886,-0.01943 0.05829,-0.01943 0.05829,0 0.0842,0.07125 0.0842,0.220218 -0.02591,1.729359 -0.576453,1.774698 -0.77724,1.774698 -0.181356,0 -0.304419,-0.04534 -0.304419,-0.142494 0,-0.12954 0.174879,-0.239649 0.233172,-0.349758 0.04534,-0.0842 0.06477,-0.181356 0.06477,-0.272034 0,-0.142494 -0.04534,-0.278511 -0.142494,-0.382143 -0.06477,-0.123063 -0.336804,-0.19431 -0.45339,-0.19431 -0.395097,0 -0.744855,0.304419 -0.744855,0.705993 0,0.03886 0,0.06477 0.0065,0.103632 C 0.557043,4.50152 1.288942,4.663445 1.787671,4.663445 2.500141,4.650495 3.160795,4.30721 3.497599,3.672464 3.704863,3.277367 3.860311,2.785115 3.860311,2.344679 V 2.312289 C 3.853811,1.87833 3.776111,1.399032 3.575323,1.023366 3.186703,0.330327 2.733313,0 1.949596,0 1.528591,0 1.062247,0.06477 0.725443,0.330327 0.401593,0.595884 0.187852,1.016889 0.187852,1.431417 c 0,0.731901 0.686562,1.353693 1.405509,1.353693 M 1.424959,1.2954 c 0,-0.58293 0.252603,-1.049274 0.550545,-1.049274 0.297942,0 0.544068,0.466344 0.544068,1.049274 0,0.576453 -0.246126,1.042797 -0.544068,1.042797 -0.297942,0 -0.550545,-0.466344 -0.550545,-1.042797"
-        ]
+        ],
+        hBody: "M 3.6054982,4.5550667e-4 C 3.0715691,0.01050967 2.5022641,0.12364551 1.9629109,0.35145186 0.39390532,1.0142331 -0.32753406,2.3790333 0.14117542,3.4886159 0.60991115,4.5982255 2.0913132,5.0325126 3.6603199,4.3697313 5.2293255,3.7069236 6.2918128,2.1980319 5.823077,1.0884487 5.5154989,0.36034186 4.6248585,-0.01494324 3.6054982,4.5550667e-4 Z M 4.3574705,0.82693457 c 0.4186502,0 0.7199842,0.11210396 0.8549746,0.31469543 C 5.5427245,1.6375385 4.8118924,2.54244 3.5800982,3.1628345 2.348303,3.7832295 1.0820072,3.8841151 0.75172782,3.3883388 0.42144844,2.8924303 1.1522541,1.9875294 2.3840747,1.3671344 3.0647164,1.0243402 3.7914474,0.8254529 4.3574705,0.82693457 Z",
+        fBody: "M 3.6603411,4.369816 C 2.0913341,5.0324914 0.60990559,4.5983102 0.14116979,3.4887006 -0.32753961,2.3791185 0.39395268,1.0143183 1.9629583,0.35153706 3.5319388,-0.31127065 5.3543094,-0.02096984 5.8230188,1.0886398 6.2917282,2.1982229 5.2293467,3.7070083 3.6603411,4.369816 Z",
+        wing: "M 4.3537717,10.87284 C 5.2271877,8.1564427 4.9141062,6.404266 2.2734852,3.4125958 1.7002654,2.763176 0.44174833,2.1533908 0.44174833,0 H 0 V 5.7333621 H 0.44174833 V 3.5726687 C 1.2042775,4.061169 2.239989,4.8090667 2.7934179,5.4735677 c 1.069975,1.2845785 1.866609,2.1589735 1.3441627,5.0414763 z"
     };
 
     const notePositions = {
+        c3: 8.5,
+        d3: 8,
+        e3: 7.5,
+        f3: 7,
+        g3: 6.5,
+        a3: 6,
+        b3: 5.5,
         c4: 5,
         d4: 4.5,
         e4: 4,
@@ -242,42 +252,119 @@
         g5: -0.5,
         a5: -1,
         b5: -1.5,
-        c6: -2
+        c6: -2,
+        d6: -2.5,
+        e6: -3,
+        f6: -3.5,
+        g6: -4,
+        a6: -4.5,
+        b6: -5,
+        c7: -5.5,
+        do3: 8.5,
+        re3: 8,
+        mi3: 7.5,
+        fa3: 7,
+        sol3: 6.5,
+        la3: 6,
+        si3: 5.5,
+        do4: 5,
+        re4: 4.5,
+        mi4: 4,
+        fa4: 3.5,
+        sol4: 3,
+        la4: 2.5,
+        si4: 2,
+        do5: 1.5,
+        re5: 1,
+        mi5: 0.5,
+        fa5: 0,
+        sol5: -0.5,
+        la5: -1,
+        si5: -1.5,
+        do6: -2,
+        re6: -2.5,
+        mi6: -3,
+        fa6: -3.5,
+        sol6: -4,
+        la6: -4.5,
+        si6: -5,
+        do7: -5.5
     };
 
     function Note(pitch, duration) {
-        let noteRoot = '';
-        let noteOctave = 0;
-        let noteComma = '';
+        this.noteRoot = '';
+        this.noteOctave = 0;
+        this.noteComma = '';
         let durParts = duration.split('/');
-        let durNum = parseInt(durParts[0]);
-        let durDen = parseInt(durParts[1]);
+        this.durNum = parseInt(durParts[0]);
+        this.durDen = parseInt(durParts[1]);
 
         if (pitch.includes('#') || pitch.includes('b')) {
-            noteComma = pitch.substr(-2);
+            this.noteComma = pitch.substr(-2);
         }
 
-        noteRoot = pitch.replace(noteComma, '');
-        noteOctave = parseInt(noteRoot.substr(-1));
-        noteRoot = noteRoot.slice(0, -1).toLowerCase();
-        if (noteComma) {
-            noteComma = noteComma.replace('#', 'd');
+        this.noteRoot = pitch.replace(this.noteComma, '');
+        this.noteOctave = parseInt(this.noteRoot.substr(-1));
+        this.noteRoot = this.noteRoot.slice(0, -1).toLowerCase();
+        if (this.noteComma) {
+            this.noteComma = this.noteComma.replace('#', 'd');
         }
 
         this.toStr = function () {
-            if (noteComma) {
-                return [noteRoot, noteOctave, noteComma, durNum, durDen].join(':');
+            if (this.noteComma) {
+                return [this.noteRoot, this.noteOctave, this.noteComma, this.durNum, this.durDen].join(':');
             } else {
-                return [noteRoot, noteOctave, durNum, durDen].join(':');
+                return [this.noteRoot, this.noteOctave, this.durNum, this.durDen].join(':');
             }
         };
 
         this.getNote = function () {
-            return noteRoot + noteOctave;
+            return this.noteRoot + this.noteOctave;
         }
 
         this.getAcc = function () {
-            return noteComma;
+            return this.noteComma;
+        }
+
+        this.draw = function (paper, porteLiHe, lThickness, left, top, color) {
+            let noteG = paper.g();
+            let noteBody = paper.path(symbols.fBody);
+            let portePos = notePositions[this.getNote()];
+            let noteBodyTop = top + (lThickness / 2) + porteLiHe * portePos;
+            let translateStr = 't ' + left + ' ' + noteBodyTop;
+            let scaleFactor = porteLiHe / 5;
+            let scaleStr = 's' + scaleFactor + ' 0 0';
+            noteBody.transform(translateStr + ' ' + scaleStr);
+            noteBody.attr({
+                fill: color
+            });
+            noteG.add(noteBody);
+
+            let nbw = noteBody.getBBox().width;
+            let nbh = noteBody.getBBox().height;
+
+            let wingTop = top + lThickness + porteLiHe * portePos - (porteLiHe * 3);
+            let wingLeft = left + nbw - scaleFactor / 2;
+            if (this.durNum === 1 && this.durDen === 8) {
+                let wing = paper.path(symbols.wing);
+                translateStr = 't ' + wingLeft + ' ' + wingTop;
+                scaleStr = 's' + scaleFactor + ' 0 0';
+                wing.transform(translateStr + ' ' + scaleStr);
+                wing.attr({
+                    fill: color
+                });
+                noteG.add(wing);
+            }
+
+            let post = paper.line(wingLeft, wingTop, wingLeft, noteBodyTop + (nbh / 3));
+            post.attr({
+                stroke: color,
+                strokeWidth: scaleFactor,
+                strokeLinecap: 'round'
+            });
+            noteG.add(post);
+
+            return noteG;
         }
     }
 
@@ -288,15 +375,15 @@
             den: parseInt(parts[1])
         };
 
-        let notes = [];
+        this.notes = [];
 
         this.addNote = function (pitch, dur) {
             let note = new Note(pitch, dur);
-            notes.push(note);
+            this.notes.push(note);
         };
 
         this.getNotes = function () {
-            return notes;
+            return this.notes;
         };
 
         this.toStr = function () {
@@ -304,8 +391,24 @@
         };
 
         this.getRequiredWidth = function (plh) {
-            return plh * 6 * (notes.length + 2);
+            return plh * 6 * (this.notes.length + 2);
         };
+
+        this.draw = function (sParams) {
+            let paper = sParams.paper;
+            let left = sParams.startLeft;
+            let top = sParams.startTop;
+            let lineWidth = sParams.lw;
+            let porteLiHe = sParams.cfg.porteLineHeight;
+            let color = sParams.cfg.noteColor;
+            let lThickness = sParams.cfg.lineThickness;
+
+            for (let note of this.notes) {
+                let noteG = note.draw(paper, porteLiHe, lThickness, left, top, color);
+
+                left += noteG.getBBox().width * 2;
+            }
+        }
     }
 
     function SatirObject(paper, configs, left, top, width) {
@@ -379,7 +482,8 @@
                 fill: this.configs.mainColor
             });
 
-            leftUsablePos = this.left + offsetLeft;
+            leftUsablePos = this.left + offsetLeft + porteLiHe * 1.5;
+            let lastAccWidth = 0;
 
             // accidentals
             for (let i = 0; i < accidentals.notes.length; i++) {
@@ -390,7 +494,6 @@
                 let accSymbol = this.paper.path(accPath);
                 scaleFactor = parseFloat((porteLiHe / 3.25).toFixed(2));
 
-                leftUsablePos += porteLiHe * 1.5;
                 let top = this.top + (notePos * porteLiHe);
 
                 translateStr = 't ' + leftUsablePos + ' ' + top;
@@ -399,36 +502,68 @@
                 accSymbol.attr({
                     fill: this.configs.mainColor
                 });
+                lastAccWidth = accSymbol.getBBox().width;
+                leftUsablePos += lastAccWidth + porteLiHe / 2;
             }
 
             // meter
-            leftUsablePos += porteLiHe;
-
-            let numElem = this.paper.path(symbols.numbers[timeSig.num]);
+            leftUsablePos += porteLiHe / 2;
+            scaleFactor = parseFloat((porteLiHe / 2.5).toFixed(2));
+            let numElems = ('' + timeSig.num).split('');
+            let locLeft = 0;
+            let numG = this.paper.g();
+            for (let n of numElems) {
+                let numElem = this.paper.path(symbols.numbers[parseInt(n)]);
+                numG.add(numElem);
+                translateStr = 't ' + locLeft + ' 0';
+                scaleStr = 's' + scaleFactor + ' 0 0';
+                numElem.transform(translateStr + ' ' + scaleStr);
+                numElem.attr({
+                    fill: this.configs.mainColor
+                });
+                locLeft += numElem.getBBox().width;
+            }
             translateStr = 't ' + leftUsablePos + ' ' + (this.top + this.configs.lineThickness);
-            scaleFactor = parseFloat((porteLiHe / 2.5).toFixed(2));
-            scaleStr = 's' + scaleFactor + ' 0 0';
-            numElem.transform(translateStr + ' ' + scaleStr);
-            numElem.attr({
-                fill: this.configs.mainColor
-            });
+            numG.transform(translateStr);
 
-            let denElem = this.paper.path(symbols.numbers[timeSig.den]);
-            translateStr = 't ' + leftUsablePos + ' ' + (this.top + porteLiHe * 2 + this.configs.lineThickness);
-            scaleFactor = parseFloat((porteLiHe / 2.5).toFixed(2));
-            scaleStr = 's' + scaleFactor + ' 0 0';
-            denElem.transform(translateStr + ' ' + scaleStr);
-            denElem.attr({
-                fill: this.configs.mainColor
-            });
+            let denElems = ('' + timeSig.den).split('');
+            let denG = this.paper.g();
+            locLeft = 0;
+            for (let n of denElems) {
+                let denElem = this.paper.path(symbols.numbers[parseInt(n)]);
+                denG.add(denElem);
+                translateStr = 't ' + locLeft + ' 0';
+                scaleStr = 's' + scaleFactor + ' 0 0';
+                denElem.transform(translateStr + ' ' + scaleStr);
+                denElem.attr({
+                    fill: this.configs.mainColor
+                });
+                locLeft += denElem.getBBox().width;
+            }
+            let offset = (numG.getBBox().width - denG.getBBox().width) / 2;
+            translateStr = 't ' + (leftUsablePos + offset) + ' ' + (this.top + porteLiHe * 2 + this.configs.lineThickness);
+            denG.transform(translateStr);
+
+            leftUsablePos += Math.max(numG.getBBox().width, denG.getBBox().width) + porteLiHe * 2;
+
+            return {
+                startLeft: Math.round(leftUsablePos * 100) / 100,
+                startTop: this.top,
+                cfg: this.configs,
+                lw: this.width,
+                paper: this.paper
+            };
         }
     }
+
+    let paper;
 
     function TmmScore(containerSelector) {
         let configs = {
             padding: {top: 20, right: 20, bottom: 20, left: 20},
             lineThickness: 0.5,
             porteLineHeight: 10,
+            noteColor: "#2d3337",
             mainColor: "#3b4552",
             porteLineColor: "#4e5872",
             paperBgColor: "#f6f7f6",
@@ -453,7 +588,7 @@
 
         document.querySelector(containerSelector).append(svgElem);
 
-        let paper = Snap('#' + svgID);
+        paper = Snap('#' + svgID);
         // eof prep work
 
         let measures = [];
@@ -468,7 +603,7 @@
             };
 
             for (let accidental of accidentalsArr) {
-                let note = new Note(accidental, '0/1');
+                let note = new Note(accidental, '1/1');
                 acci.notes.push(note);
             }
 
@@ -520,16 +655,17 @@
 
         this.draw = function () {
             for (let satir of satirlar) {
-                satir.draw(accidentals[0], timeSignatures[0]);
+                let sParams = satir.draw(accidentals[0], timeSignatures[0]);
+                measures[0].draw(sParams);
+                break;
             }
         };
     }
 
     let tmmScore = new TmmScore('#dv-tmm-wrapper');
 
-    //tmmScore.setAccidentals(['E4b8', 'F4b5', 'G4b4', 'A4b1', 'B4#1', 'C5#4', 'D5#5', 'E5#8', 'F5#4', 'G5#4']);
-    tmmScore.setAccidentals([]);
-    tmmScore.setMeter('8/9');
+    tmmScore.setAccidentals(['B4b4', 'F5#4', 'C5#4']);
+    tmmScore.setMeter('9/8');
 
     let measure = new Measure('9/8');
     measure.addNote('La4', '1/16');
