--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
         hBody: "M 3.6054982,4.5550667e-4 C 3.0715691,0.01050967 2.5022641,0.12364551 1.9629109,0.35145186 0.39390532,1.0142331 -0.32753406,2.3790333 0.14117542,3.4886159 0.60991115,4.5982255 2.0913132,5.0325126 3.6603199,4.3697313 5.2293255,3.7069236 6.2918128,2.1980319 5.823077,1.0884487 5.5154989,0.36034186 4.6248585,-0.01494324 3.6054982,4.5550667e-4 Z M 4.3574705,0.82693457 c 0.4186502,0 0.7199842,0.11210396 0.8549746,0.31469543 C 5.5427245,1.6375385 4.8118924,2.54244 3.5800982,3.1628345 2.348303,3.7832295 1.0820072,3.8841151 0.75172782,3.3883388 0.42144844,2.8924303 1.1522541,1.9875294 2.3840747,1.3671344 3.0647164,1.0243402 3.7914474,0.8254529 4.3574705,0.82693457 Z",
         fBody: "M 3.6603411,4.369816 C 2.0913341,5.0324914 0.60990559,4.5983102 0.14116979,3.4887006 -0.32753961,2.3791185 0.39395268,1.0143183 1.9629583,0.35153706 3.5319388,-0.31127065 5.3543094,-0.02096984 5.8230188,1.0886398 6.2917282,2.1982229 5.2293467,3.7070083 3.6603411,4.369816 Z",
         wing: "M 4.3537717,10.87284 C 5.2271877,8.1564427 4.9141062,6.404266 2.2734852,3.4125958 1.7002654,2.763176 0.44174833,2.1533908 0.44174833,0 H 0 V 5.7333621 H 0.44174833 V 3.5726687 C 1.2042775,4.061169 2.239989,4.8090667 2.7934179,5.4735677 c 1.069975,1.2845785 1.866609,2.1589735 1.3441627,5.0414763 z",
-        n1: "",
+        n1: "m 3.6054982,-2.3495445 c -0.5339291,0.010054 -1.1032341,0.12319 -1.6425873,0.3509963 C 0.39390532,-1.3357669 -0.32753406,0.02903329 0.14117542,1.1386159 0.60991115,2.2482255 2.0913132,2.6825126 3.6603199,2.0197313 5.2293255,1.3569236 6.2918128,-0.15196811 5.823077,-1.2615513 5.5154989,-1.9896582 4.6248585,-2.3649433 3.6054982,-2.3495445 Z m 0.7519723,0.8264791 c 0.4186502,0 0.7199842,0.1121039 0.8549746,0.3146954 C 5.5427245,-0.71246151 4.8118924,0.19243999 3.5800982,0.81283449 2.348303,1.4332295 1.0820072,1.5341151 0.75172782,1.0383388 0.42144844,0.54243029 1.1522541,-0.36247061 2.3840747,-0.98286561 3.0647164,-1.3256598 3.7914474,-1.5245471 4.3574705,-1.5230654 Z",
         n2: "M 5.4343379,-16.6 V -1.7988263 C 5.0033846,-2.1775299 4.3383015,-2.3706757 3.6055115,-2.358478 3.0715559,-2.349478 2.5025686,-2.2354209 1.9632419,-2.0076089 0.39423631,-1.3448012 -0.32757348,0.02005076 0.14113589,1.1296591 0.60987173,2.2393475 2.0913003,2.6734762 3.6602802,2.0107475 5.1552819,1.3792668 6.1872627,-0.01950424 5.8761656,-1.1099846 V -16.484763 Z M 4.3574044,-1.5321792 c 0.4186502,0 0.7202752,0.112077 0.8552392,0.3147216 C 5.5429229,-0.72160291 4.811985,0.18372176 3.5801909,0.80411643 2.3483959,1.4245108 1.0821794,1.5252108 0.75192652,1.0294091 0.42162069,0.53352743 1.1525851,-0.37132091 2.3844057,-0.99163658 3.0650471,-1.3344302 3.7913813,-1.5330522 4.3574044,-1.5321792 Z",
         n4: "M 5.4338987,-16.6267 V -1.8270931 C 4.6886204,-2.4808514 3.24172,-2.5740504 1.9627768,-2.0337847 0.39379763,-1.3709911 -0.32753591,-0.00612812 0.1412,1.1034783 0.6099093,2.2130607 2.0913378,2.6473474 3.6603702,1.9845667 5.1558481,1.352874 6.1879083,-0.04705612 5.8757264,-1.1377215 V -16.511461 Z",
         n8: "M 5.4338908,-16.6 V -1.8003873 C 4.6886389,-2.4541726 3.2417147,-2.5473266 1.9627951,-2.0070799 0.39379181,-1.3442932 -0.327524,0.02060076 0.14119185,1.1301831 0.6099212,2.2397925 2.0913585,2.6740522 3.6603622,2.0112715 5.1558693,1.3795268 6.1879268,-0.02035624 5.8757185,-1.1110165 V -11.4835 c 0.7995708,0.12909 1.557102,0.555569 2.1296048,1.140487 1.0928906,1.1165914 1.806366,2.8096629 1.4691519,4.6906652 -0.2430701,1.3558561 -0.6764867,2.2088728 -1.1115675,3.2866248 l 0.3126581,-0.03307 C 9.3009879,-3.813072 10.340258,-5.8140058 10.069258,-7.912154 9.8180499,-9.8570773 8.4631133,-11.21149 7.5820958,-12.311382 6.6707994,-13.449073 5.9883781,-14.192491 5.820447,-16.579847 Z",
@@ -305,7 +305,8 @@
         this.noteRoot = '';
         this.noteOctave = 0;
         this.noteComma = '';
-        let durParts = duration.split('/');
+        this.durStr = duration;
+        let durParts = this.durStr.split('/');
         this.durNum = parseInt(durParts[0]);
         this.durDen = parseInt(durParts[1]);
 
@@ -336,9 +337,38 @@
             return this.noteComma;
         }
 
+        this.getPathStr = function (durStr) {
+            let path;
+            switch (durStr) {
+                case "1/32":
+                    path = symbols.n32;
+                    break;
+                case "1/16":
+                    path = symbols.n16;
+                    break;
+                case "1/8":
+                    path = symbols.n8;
+                    break;
+                case "1/4":
+                    path = symbols.n4;
+                    break;
+                case "1/2":
+                    path = symbols.n2;
+                    break;
+                case "1/1":
+                    path = symbols.n1;
+                    break;
+                default:
+                    path = symbols.n4;
+                    break;
+            }
+            return path;
+        }
+
         this.draw = function (paper, porteLiHe, lThickness, left, top, color) {
             let noteG = paper.g();
-            let noteBody = paper.path(symbols.n2);
+            let path = this.getPathStr(this.durStr);
+            let noteBody = paper.path(path);
             let portePos = notePositions[this.getNote()];
             let noteBodyTop = top + (lThickness / 2) + porteLiHe * portePos;
             let translateStr = 't ' + left + ' ' + noteBodyTop;
@@ -350,32 +380,16 @@
             });
             noteG.add(noteBody);
 
-            /*
-            let nbw = noteBody.getBBox().width;
-            let nbh = noteBody.getBBox().height;
-
-            let wingTop = top + lThickness + porteLiHe * portePos - (porteLiHe * 3);
-            let wingLeft = left + nbw - scaleFactor / 2;
-            if (this.durNum === 1 && this.durDen === 8) {
-                let wing = paper.path(symbols.wing);
-                translateStr = 't ' + wingLeft + ' ' + wingTop;
-                scaleStr = 's' + scaleFactor + ' 0 0';
-                wing.transform(translateStr + ' ' + scaleStr);
-                wing.attr({
-                    fill: color
-                });
-                noteG.add(wing);
-            }
-
-            let post = paper.line(wingLeft, wingTop, wingLeft, noteBodyTop + (nbh / 3));
-            post.attr({
-                stroke: color,
-                strokeWidth: scaleFactor,
-                strokeLinecap: 'round'
-            });
-            noteG.add(post);
-            */
             return noteG;
+        }
+
+        this.getWidth = function (porteLiHe, paper) {
+            let scaleFactor = porteLiHe / 5;
+            let path = this.getPathStr(this.durStr);
+            let noteBody = paper.path(path);
+            let width = noteBody.getBBox().width * scaleFactor;
+            noteBody.remove();
+            return width;
         }
     }
 
@@ -401,8 +415,13 @@
             return [timeSignature.num, timeSignature.den].join(':');
         };
 
-        this.getRequiredWidth = function (plh) {
-            return plh * 6 * (this.notes.length + 2);
+        this.getRequiredWidth = function (porteLiHe, paper) {
+            let minWidth = 0;
+
+            for (let note of this.notes) {
+                minWidth += note.getWidth(porteLiHe, paper) + porteLiHe * 1.5;
+            }
+            return Math.max(minWidth, porteLiHe * 1.5 * 10);
         };
 
         this.draw = function (sParams) {
@@ -416,8 +435,7 @@
 
             for (let note of this.notes) {
                 let noteG = note.draw(paper, porteLiHe, lThickness, left, top, color);
-
-                left += noteG.getBBox().width * 2;
+                left += noteG.getBBox().width + porteLiHe * 1.5;
             }
         }
     }
@@ -432,6 +450,11 @@
         this.vLineLeft = null;
         this.vLineRight = null;
         this.solAnahtari = null;
+        this.measures = [];
+
+        this.addMeasure = function (measure) {
+            this.measures.push(measure);
+        };
 
         this.draw = function (accidentals, timeSig) {
             // 5 lines
@@ -454,7 +477,7 @@
             let porteLiHe = this.configs.porteLineHeight;
             let porteHeight = 4 * porteLiHe;
 
-            // Left & Right vertical lines
+            // left & right vertical lines
             let x1 = this.left;
             let y1 = this.top;
             let y2 = this.top + porteHeight;
@@ -473,7 +496,7 @@
 
             let leftUsablePos = this.left;
 
-            // Sol Anahtari
+            // clef
             this.solAnahtari = this.paper.path(symbols.gClef);
 
             let solHeight = this.solAnahtari.getBBox().height;
@@ -555,19 +578,22 @@
             translateStr = 't ' + (leftUsablePos + offset) + ' ' + (this.top + porteLiHe * 2 + this.configs.lineThickness);
             denG.transform(translateStr);
 
+            // measures
             leftUsablePos += Math.max(numG.getBBox().width, denG.getBBox().width) + porteLiHe * 2;
 
-            return {
+            let sParams = {
                 startLeft: Math.round(leftUsablePos * 100) / 100,
                 startTop: this.top,
                 cfg: this.configs,
                 lw: this.width,
                 paper: this.paper
             };
+
+            for (let measure of this.measures) {
+                measure.draw(sParams);
+            }
         }
     }
-
-    let paper;
 
     function TmmScore(containerSelector) {
         let configs = {
@@ -599,7 +625,7 @@
 
         document.querySelector(containerSelector).append(svgElem);
 
-        paper = Snap('#' + svgID);
+        let paper = Snap('#' + svgID);
         // eof prep work
 
         let measures = [];
@@ -645,30 +671,30 @@
             let numOfReqLines = 1;
 
             let remainingWidth = satirWidth;
+            let offsetTop = pTop + (6 * configs.porteLineHeight);
+            let satir = new SatirObject(paper, configs, pLeft, offsetTop, satirWidth);
+            satirlar.push(satir);
             for (let measure of measures) {
-                let minWidth = measure.getRequiredWidth(configs.porteLineHeight);
+                let minWidth = measure.getRequiredWidth(configs.porteLineHeight, paper);
+                console.log(minWidth);
                 if (minWidth > remainingWidth) {
                     numOfReqLines += 1;
                     remainingWidth = satirWidth;
+                    offsetTop += 17 * configs.porteLineHeight;
+                    satir = new SatirObject(paper, configs, pLeft, offsetTop, satirWidth);
+                    satirlar.push(satir);
                 }
                 remainingWidth = remainingWidth - minWidth;
+                satir.addMeasure(measure);
             }
 
             svgElem.style.height = (configs.padding.top + configs.padding.bottom) + (numOfReqLines * 17 * configs.porteLineHeight) + 'px';
-
-            for (let i = 0; i < numOfReqLines; i++) {
-                let offsetTop = pTop + (6 * configs.porteLineHeight) + (i * 17 * configs.porteLineHeight);
-                let satir = new SatirObject(paper, configs, pLeft, offsetTop, satirWidth);
-                satirlar.push(satir);
-            }
             // eof satir objects
         };
 
         this.draw = function () {
             for (let satir of satirlar) {
-                let sParams = satir.draw(accidentals[0], timeSignatures[0]);
-                measures[0].draw(sParams);
-                break;
+                satir.draw(accidentals[0], timeSignatures[0]);
             }
         };
     }
@@ -679,12 +705,12 @@
     tmmScore.setMeter('9/8');
 
     let measure = new Measure('9/8');
-    measure.addNote('La4', '1/16');
+    measure.addNote('La4', '1/32');
     measure.addNote('Si4b4', '1/16');
     measure.addNote('Do5#4', '1/8');
-    measure.addNote('Re5', '1/16');
-    measure.addNote('Mi5', '1/16');
-    measure.addNote('Re5', '1/8');
+    measure.addNote('Re5', '1/4');
+    measure.addNote('Mi5', '1/2');
+    measure.addNote('Re5', '1/1');
     measure.addNote('Fa5', '1/8');
     measure.addNote('Mi5', '1/8');
     measure.addNote('Re5', '1/4');
